# django-jazzmin

./: .gitignore  pyproject.toml  tox.ini
jazzmin/: __init__.py  settings.py  utils.py
jazzmin/templatetags/: jazzmin.py
tests/: test_admin_views.py
